<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="settingViewModel"
            type="com.example.onlineshop.viewmodel.SettingViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.NotificationFragment"
        android:background="#394867">

        <TextView
            android:id="@+id/notification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="32dp"
            style="@style/TextAppearance.AppCompat.Title"
            android:textStyle="italic"
            android:text="@string/notification"
            android:textColor="#8DA7DC"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{()-> settingViewModel.onClickNotificationSwitch()}"
            android:layout_margin="32dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroupNotification"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/switch_notification"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/radioButton_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()-> settingViewModel.onClickNotificationRadioButtonTime()}"
                android:text="@string/_3hour"
                android:textColor="#C0D2E1"/>

            <RadioButton
                android:id="@+id/radioButton_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()-> settingViewModel.onClickNotificationRadioButtonTime()}"
                android:text="@string/_5hour"
                android:textColor="#C0D2E1"/>

            <RadioButton
                android:id="@+id/radioButton_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()-> settingViewModel.onClickNotificationRadioButtonTime()}"
                android:text="@string/_8hour"
                android:textColor="#C0D2E1"/>

            <RadioButton
                android:id="@+id/radioButton_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()-> settingViewModel.onClickNotificationRadioButtonTime()}"
                android:text="@string/_12hour"
                android:textColor="#C0D2E1"/>

            <RadioButton
                android:id="@+id/radioButton_none_of_them"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()-> settingViewModel.onClickNotificationTime()}"
                android:text="@string/none_of_them"
                android:textColor="#C0D2E1"/>

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time" />

        </RadioGroup>

        <Button
            android:id="@+id/button_save_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/radioGroupNotification"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:onClick="@{()-> settingViewModel.onClickNotificationSave()}"
            android:text="@string/save"
            android:textColor="@color/black"
            android:background="#8DA7DC"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>