<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="cartViewModel"
            type="com.example.onlineshop.viewmodel.CartViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".view.fragment.AddCommentFragment"
        android:background="#9ba4b4">
        <ImageView
            android:layout_width="223dp"
            android:layout_height="29dp"
            android:background="@drawable/ic_path_1" />
        <TextView
            android:id="@+id/title_insert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_alignParentTop="true"
            android:text="@string/edit_comment"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_form"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_insert"
            android:hint="@string/your_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#14274e"
                android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_form"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_form"
            android:hint="@string/your_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#14274e"
                android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rating_layout"
            android:layout_below="@id/email_form"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/star1_edit"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/star2_edit"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> cartViewModel.onClickAddRate(1)}"
                android:src="@drawable/ic_star_border" />

            <ImageView
                android:id="@+id/star2_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/star1_edit"
                app:layout_constraintEnd_toStartOf="@id/star3_edit"
                android:layout_weight="1"
                android:onClick="@{() -> cartViewModel.onClickAddRate(2)}"
                android:src="@drawable/ic_star_border" />

            <ImageView
                android:id="@+id/star3_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/star2_edit"
                app:layout_constraintEnd_toStartOf="@id/star4_edit"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="@{() -> cartViewModel.onClickAddRate(3)}"
                android:layout_weight="1"
                android:src="@drawable/ic_star_border" />

            <ImageView
                android:id="@+id/star4_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/star3_edit"
                app:layout_constraintEnd_toStartOf="@id/star5_edit"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="@{() -> cartViewModel.onClickAddRate(4)}"
                android:layout_weight="1"
                android:src="@drawable/ic_star_border" />

            <ImageView
                android:id="@+id/star5_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/star4_edit"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="@{() -> cartViewModel.onClickAddRate(5)}"
                android:layout_weight="1"
                android:src="@drawable/ic_star_border" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:id="@+id/scrollview_comment"
            android:layout_below="@id/rating_layout"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/comment_form"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_comment"
                    android:textColorHint="#546A95">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/scrollview_comment"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_delete_edit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:layout_marginRight="2dp"
                android:background="#14274e"
                android:textColor="@color/gray"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/btn_edit_edit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                android:onClick="@{() -> cartViewModel.onClickEditComment()}"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:layout_marginRight="2dp"
                android:background="#14274e"
                android:textColor="@color/gray"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/btn_save_edit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:layout_marginLeft="2dp"
                android:background="#14274e"
                android:textColor="@color/gray"
                android:textSize="20dp"/>
        </LinearLayout>


    </RelativeLayout>
</layout>