<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="settingViewModel"
            type="com.example.onlineshop.viewmodel.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.BuyFragment"
        android:background="#394867">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/address"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/your_address"
                    android:textColor="#F1F6F9"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/edit_address"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:drawableLeft="@drawable/ic_baseline_edit_24"
                    android:pointerIcon="arrow"
                    android:textColor="#FFFFFF"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_address_name"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:maxLines="2"
                    android:textColor="#3788C8"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address"
                    tools:text="address" />

                <View
                    android:id="@+id/view_divider_below_address"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/teal_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_address_name" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"

                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_divider_below_address">

                    <TextView
                        android:id="@+id/text_view_code"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:maxLines="2"
                        android:text="@string/discount_code"
                        android:textColor="#F1F6F9"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <EditText
                        android:id="@+id/editText_code"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Enter code"
                        android:textColorHint="#14274E"
                        android:inputType="textPersonName"
                        app:layout_constraintStart_toEndOf="@id/text_view_code"
                        app:layout_constraintTop_toBottomOf="@id/text_view_code" />

                    <TextView
                        android:id="@+id/text_view_check_code"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:maxLines="2"
                        android:textStyle="italic"
                        app:layout_constraintTop_toBottomOf="@id/editText_code"
                        app:layout_constraintStart_toStartOf="parent" />


                    <Button
                        android:id="@+id/button_check_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check"
                        android:textColor="#6491B5"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        app:layout_constraintBottom_toBottomOf="@id/editText_code"
                        app:layout_constraintTop_toTopOf="@id/editText_code"
                        app:layout_constraintEnd_toEndOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_recycler"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/constraint_layout_continue"
                    app:layout_constraintTop_toBottomOf="@id/layout_code">

                    <TextView
                        android:id="@+id/products"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="@string/products"
                        android:textStyle="italic"
                        android:textColor="#F1F6F9"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_cart"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/products" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_layout_continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cart_button_layou3t"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_start"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.04" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.96" />

                    <Button
                        android:id="@+id/button_continue_buying"
                        android:layout_width="78dp"
                        android:layout_height="38dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="#C54E45"
                        android:text="@string/buy"
                        android:textColor="#0A2032"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/guideline_end"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/total_price"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        app:layout_constraintBaseline_toBaselineOf="@id/button_continue_buying"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/toman"
                        android:layout_marginLeft="10dp" />

                    <TextView
                        android:id="@+id/toman"
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        android:text="@string/toman"
                        app:layout_constraintBaseline_toBaselineOf="@id/button_continue_buying"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/total"
                        android:layout_marginLeft="4dp" />

                    <TextView
                        android:id="@+id/total"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        android:text="@string/total"
                        android:textColor="#A6BBCC"
                        app:layout_constraintBaseline_toBaselineOf="@id/button_continue_buying"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/guideline_start"
                        android:layout_marginLeft="16dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>